// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-layout example 1 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "border": "solid 1px rgba(33,36,44,0.50)",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <button
    className=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "::MozFocusInner": Object {
          "border": 0,
        },
        ":focus": Object {
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        },
        "alignItems": "center",
        "background": "#1865f2",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "#ffffff",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "margin": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
        "touchAction": "manipulation",
        "userSelect": "none",
        "width": 100,
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "display": "flex",
          "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "overflow": "hidden",
          "pointerEvents": "none",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
    >
      A
    </span>
  </button>
  <div
    aria-hidden="true"
    className=""
    style={
      Object {
        "MsFlexBasis": 12,
        "MsFlexPreferredSize": 12,
        "WebkitFlexBasis": 12,
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": 12,
        "flexDirection": "column",
        "flexShrink": 0,
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": 12,
        "zIndex": 0,
      }
    }
  />
  <button
    className=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "::MozFocusInner": Object {
          "border": 0,
        },
        ":focus": Object {
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        },
        "alignItems": "center",
        "background": "#1865f2",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "#ffffff",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "margin": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
        "touchAction": "manipulation",
        "userSelect": "none",
        "width": 100,
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "display": "flex",
          "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "overflow": "hidden",
          "pointerEvents": "none",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
    >
      B
    </span>
  </button>
  <div
    aria-hidden="true"
    className=""
    style={
      Object {
        "MsFlexBasis": 12,
        "MsFlexPreferredSize": 12,
        "WebkitFlexBasis": 12,
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": 12,
        "flexDirection": "column",
        "flexShrink": 0,
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": 12,
        "zIndex": 0,
      }
    }
  />
  <button
    className=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "::MozFocusInner": Object {
          "border": 0,
        },
        ":focus": Object {
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        },
        "alignItems": "center",
        "background": "#1865f2",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "#ffffff",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "margin": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
        "touchAction": "manipulation",
        "userSelect": "none",
        "width": 100,
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "display": "flex",
          "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "overflow": "hidden",
          "pointerEvents": "none",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
    >
      C
    </span>
  </button>
  <div
    aria-hidden="true"
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 1,
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  />
  <button
    className=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "::MozFocusInner": Object {
          "border": 0,
        },
        ":focus": Object {
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        },
        "alignItems": "center",
        "background": "#1865f2",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "#ffffff",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "margin": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
        "touchAction": "manipulation",
        "userSelect": "none",
        "width": 100,
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "display": "flex",
          "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "overflow": "hidden",
          "pointerEvents": "none",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
    >
      Cancel
    </span>
  </button>
  <div
    aria-hidden="true"
    className=""
    style={
      Object {
        "MsFlexBasis": 12,
        "MsFlexPreferredSize": 12,
        "WebkitFlexBasis": 12,
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": 12,
        "flexDirection": "column",
        "flexShrink": 0,
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": 12,
        "zIndex": 0,
      }
    }
  />
  <button
    className=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "::MozFocusInner": Object {
          "border": 0,
        },
        ":focus": Object {
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        },
        "alignItems": "center",
        "background": "#1865f2",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "#ffffff",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "margin": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
        "touchAction": "manipulation",
        "userSelect": "none",
        "width": 100,
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "display": "flex",
          "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "overflow": "hidden",
          "pointerEvents": "none",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
    >
      Accept
    </span>
  </button>
</div>
`;

exports[`wonder-blocks-layout example 2 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "#0a2a66",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "color": "#ffffff",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  Hello, world!
</div>
`;

exports[`wonder-blocks-layout example 3 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "#0a2a66",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "color": "#ffffff",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 48,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  Hello, world!
</div>
`;

exports[`wonder-blocks-layout example 4 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#0a2a66",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 16,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "height": "81.25%",
        "margin": 0,
        "maxHeight": 624,
        "maxWidth": 576,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "93.75%",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-labelledby="uid-modal-0-wb-id"
      className=""
      role="dialog"
      style={
        Object {
          "alignItems": "stretch",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": "100%",
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "overflow": "hidden",
          "padding": 0,
          "position": "relative",
          "width": "100%",
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "background": "white",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flex": "1 1 auto",
            "flexDirection": "column",
            "height": "100%",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "width": "100%",
            "zIndex": 0,
          }
        }
      >
        <button
          aria-label="Close modal"
          className=""
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "::MozFocusInner": Object {
                "border": 0,
              },
              ":focus": Object {
                "WebkitTapHighlightColor": "rgba(0,0,0,0)",
              },
              "alignItems": "center",
              "background": "none",
              "border": "none",
              "boxSizing": "border-box",
              "color": "rgba(33,36,44,0.64)",
              "cursor": "pointer",
              "display": "inline-flex",
              "height": 40,
              "justifyContent": "center",
              "margin": -8,
              "outline": "none",
              "padding": 0,
              "position": "absolute",
              "right": 16,
              "textDecoration": "none",
              "top": 16,
              "touchAction": "manipulation",
              "width": 40,
              "zIndex": 1,
            }
          }
          tabIndex={0}
          type="button"
        >
          <svg
            className=""
            height={24}
            style={
              Object {
                "display": "inline-block",
                "flexGrow": 0,
                "flexShrink": 0,
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M12 10.586L7.706 6.293a1 1 0 1 0-1.413 1.413L10.586 12l-4.293 4.294a1 1 0 0 0 1.413 1.413L12 13.414l4.294 4.293a1 1 0 0 0 1.413-1.413L13.414 12l4.293-4.294a1 1 0 1 0-1.413-1.413L12 10.586z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxShadow": "0px 1px 0px rgba(33,36,44,0.16)",
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "column",
              "margin": 0,
              "minHeight": 66,
              "minWidth": 0,
              "padding": "24px 32px",
              "position": "relative",
              "width": "100%",
              "zIndex": 0,
            }
          }
        >
          <h3
            className=""
            id="uid-modal-0-wb-id"
            style={
              Object {
                "@media (maxWidth: 1023px)": Object {
                  "fontSize": 22,
                  "lineHeight": "26px",
                },
                "@media (minWidth: 1024px)": Object {
                  "fontSize": 24,
                  "lineHeight": "28px",
                },
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
                "fontWeight": 700,
                "marginBottom": 0,
                "marginTop": 0,
              }
            }
          >
            Title
          </h3>
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "color": "rgba(33,36,44,0.64)",
                "display": "block",
                "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
                "fontSize": 16,
                "fontWeight": 400,
                "lineHeight": "20px",
                "marginTop": 8,
              }
            }
          >
            You're reading the subtitle!
          </span>
        </div>
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "block",
              "flex": 1,
              "flexDirection": "column",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "overflow": "auto",
              "padding": 0,
              "position": "relative",
              "zIndex": 0,
            }
          }
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flex": 1,
                "flexDirection": "column",
                "margin": 0,
                "minHeight": "100%",
                "minWidth": 0,
                "padding": 32,
                "paddingBottom": 32,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <div
              className=""
              style={
                Object {
                  "alignItems": "stretch",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "boxSizing": "border-box",
                  "display": "flex",
                  "flexDirection": "column",
                  "margin": 0,
                  "minHeight": 0,
                  "minWidth": 0,
                  "padding": 0,
                  "position": "relative",
                  "zIndex": 0,
                }
              }
            >
              <p
                className=""
                style={
                  Object {
                    "MozOsxFontSmoothing": "grayscale",
                    "WebkitFontSmoothing": "antialiased",
                    "display": "block",
                    "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "lineHeight": "22px",
                  }
                }
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </p>
            </div>
          </div>
        </div>
        <div
          className=""
          style={
            Object {
              "alignItems": "center",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxShadow": "0px -1px 0px rgba(33,36,44,0.16)",
              "boxSizing": "border-box",
              "display": "flex",
              "flex": "0 0 auto",
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "margin": 0,
              "minHeight": 64,
              "minWidth": 0,
              "padding": 0,
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
              "position": "relative",
              "zIndex": 0,
            }
          }
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "row",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <button
              className=""
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="button"
              style={
                Object {
                  "::MozFocusInner": Object {
                    "border": 0,
                  },
                  ":focus": Object {
                    "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  },
                  "alignItems": "center",
                  "background": "none",
                  "border": "none",
                  "borderRadius": 4,
                  "boxSizing": "border-box",
                  "color": "#1865f2",
                  "cursor": "pointer",
                  "display": "inline-flex",
                  "height": 40,
                  "justifyContent": "center",
                  "margin": 0,
                  "marginLeft": 16,
                  "outline": "none",
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "position": "relative",
                  "textDecoration": "none",
                  "touchAction": "manipulation",
                  "userSelect": "none",
                }
              }
              tabIndex={0}
              type="button"
            >
              <span
                className=""
                style={
                  Object {
                    "MozOsxFontSmoothing": "grayscale",
                    "WebkitFontSmoothing": "antialiased",
                    "alignItems": "center",
                    "display": "flex",
                    "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "lineHeight": "20px",
                    "overflow": "hidden",
                    "pointerEvents": "none",
                    "position": "relative",
                    "textOverflow": "ellipsis",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                Back
              </span>
            </button>
            <button
              className=""
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="button"
              style={
                Object {
                  "::MozFocusInner": Object {
                    "border": 0,
                  },
                  ":focus": Object {
                    "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  },
                  "alignItems": "center",
                  "background": "#1865f2",
                  "border": "none",
                  "borderRadius": 4,
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "cursor": "pointer",
                  "display": "inline-flex",
                  "height": 40,
                  "justifyContent": "center",
                  "margin": 0,
                  "marginLeft": 16,
                  "outline": "none",
                  "paddingBottom": 0,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 0,
                  "position": "relative",
                  "textDecoration": "none",
                  "touchAction": "manipulation",
                  "userSelect": "none",
                }
              }
              tabIndex={0}
              type="button"
            >
              <span
                className=""
                style={
                  Object {
                    "MozOsxFontSmoothing": "grayscale",
                    "WebkitFontSmoothing": "antialiased",
                    "alignItems": "center",
                    "display": "flex",
                    "fontFamily": "Lato, \\"Noto Sans\\", sans-serif",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "lineHeight": "20px",
                    "overflow": "hidden",
                    "pointerEvents": "none",
                    "textOverflow": "ellipsis",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                Continue
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`wonder-blocks-layout example 5 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    This should
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 16,
          "MsFlexPreferredSize": 16,
          "WebkitFlexBasis": 16,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 16,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 16,
          "zIndex": 0,
        }
      }
    />
    not wrap.
  </div>
</div>
`;

exports[`wonder-blocks-layout example 6 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    No
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 16,
          "MsFlexPreferredSize": 16,
          "WebkitFlexBasis": 16,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 16,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 16,
          "zIndex": 0,
        }
      }
    />
    overlap!
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    No
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": 16,
          "MsFlexPreferredSize": 16,
          "WebkitFlexBasis": 16,
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": 16,
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": 16,
          "zIndex": 0,
        }
      }
    />
    overlap!
  </div>
</div>
`;
